tests/files/lexer_tests/should_fail/105.cmdr
//Should not parse due to unterminated scope
timeout 40000 echo hi;}